Implemented fixed header

--- a/web/src/components/Layout/Layout.astro
+++ b/web/src/components/Layout/Layout.astro
@@ -21,7 +21,7 @@
 }
 
 .header {
-  position: sticky;
+  position: fixed;
   height: var(--headerH);
   top: 0;
   left: 0;
@@ -31,7 +31,6 @@
 
 .main {
   display: block;
-  transform: translateY(calc( var(--headerH) * -1) );
 }
 
 .footer {
