--- a/web/src/layouts/Project/Project2Column.astro
+++ b/web/src/layouts/Project/Project2Column.astro
@@ -68,7 +68,7 @@ $containerWidth: 100vw - (100vw * $containerPadW);
       align-self: start;
 
       position: sticky;
-      top: 0px;
+      top: var(--headerH);
     }
     .right {
       min-width: 0;
