--- a/web/src/layouts/home.astro
+++ b/web/src/layouts/home.astro
@@ -91,7 +91,7 @@ function applyPostProcess( page:Page ) {
         variant={GardenListVariant.WITH_SUBTITLE} />
       <div class="pad4"/>
     </section>
-    <RubberBall client:media={'(min-width: 426px), (prefers-reduced-motion: reduce)'} />
+    <!-- <RubberBall client:media={'(min-width: 426px), (prefers-reduced-motion: reduce)'} /> -->
   </div>
 </BaseLayout>
 
@@ -105,7 +105,7 @@ function applyPostProcess( page:Page ) {
   position: relative;
 }
 
-$fold: 90vh;
+$fold: 80vh;
 .home {
   width: 100%;
   height: $fold;
