--- a/web/src/layouts/home.astro
+++ b/web/src/layouts/home.astro
@@ -6,8 +6,8 @@ import {loadHTML, html} from '../lib/html';
 
 import BaseLayout from './base.astro';
 
-import {listProjects} from '../pages/projects';
-import {listGarden} from '../pages/garden';
+import {listProjects} from '../lib/projects';
+import {listGarden} from '../lib/garden';
 
 import ProjectGrid from '../components/Project/ProjectGrid.tsx';
 import GardenList, {GardenListVariant} from '../components/Garden/GardenList.tsx';
