--- a/web/src/pages/experiments/toy-robot.astro
+++ b/web/src/pages/experiments/toy-robot.astro
@@ -5,7 +5,7 @@ import {pagePathToUrl} from '../../lib/page/pagePathToUrl.js'
 import { Markdown } from 'astro/components';
 import MinimalLayout from '../../layouts/minimal.astro';
 
-import RobotPlayground from './ToyRobot/Playground.tsx';
+import RobotPlayground from '../../components/ToyRobot/Playground.tsx';
 
 /** @ts-ignore */
 const abspath = import.meta.url.pathname;
