--- a/web/src/styles/_base.scss
+++ b/web/src/styles/_base.scss
@@ -26,6 +26,7 @@
   /* Margin/padding units */
   --gap: #{$gap};
   --headerH: 64px;
+  --footerH: 80px;
 
   /** Default colorscheme is light */
   color-scheme: light;
