--- a/web/src/layouts/minimal.astro
+++ b/web/src/layouts/minimal.astro
@@ -1,5 +1,5 @@
 ---
-import {cn} from '../lib/helpers.js'
+import {cn} from '../lib/helpers'
 import {Page} from '../lib/page/Page.ts'
 const page:Page = Astro.props.page;
 const className = Astro.props.className || '';
