--- a/web/src/styles/_base.scss
+++ b/web/src/styles/_base.scss
@@ -37,10 +37,12 @@
   --text2-invert: var(--text2-dark);
 
   --surface1: var(--surface1-light);
+  --surface1-translucent: var(--surface1-light-translucent);
   --surface2: var(--surface2-light);
   --surface3: var(--surface3-light);
   --surface4: var(--surface4-light);
   --surface1-invert: var(--surface1-dark);
+  --surface1-invert-translucent: var(--surface1-dark-translucent);
   --surface2-invert: var(--surface2-dark);
   --surface3-invert: var(--surface3-dark);
   --surface4-invert: var(--surface4-dark);
