--- a/web/src/styles/_helpers.scss
+++ b/web/src/styles/_helpers.scss
@@ -1,4 +1,4 @@
-@use "variables" as *;
+@use 'variables' as *;
 
 @mixin text-truncate($lines, $widows) {
   text-overflow: ellipsis;
@@ -38,4 +38,8 @@
 
 @mixin weight($weight) {
   font-variation-settings: 'wght' $weight;
+}
+
+@mixin glass($weight) {
+  backdrop-filter: blur($weight);
 }
