--- a/web/src/components/Navigation/Navigation.module.scss
+++ b/web/src/components/Navigation/Navigation.module.scss
@@ -1,4 +1,5 @@
 @use 'src/styles/breakpoints' as bp;
+@use 'src/styles/helpers' as h;
 
 .nav {
   display: flex;
@@ -38,9 +39,24 @@
 
   & ul li a {
     display: block;
+    position: relative;
     color: inherit;
     text-decoration: none;
     text-transform: uppercase;
+
+    &::after {
+      position: absolute;
+      color: currentColor;
+      fill: currentColor;
+      content: ' ';
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      @include h.straightSquiggle();
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
 
     @include bp.breakpoint(medium, max) {
       padding: 0.5rem 1.5rem;
@@ -48,11 +64,9 @@
     @include bp.breakpoint(medium, min) {
       padding: 0.5rem;
     }
-  }
 
-  @media (hover: hover) {
-    & ul li a:hover {
-      color: var(--text2);
+    &:hover {
+      color: var(--brand);
       transform: translateY(-1px);
     }
   }
