Finished port to Astro 0.21 🤩

--- a/web/src/components/Layout/Layout.astro
+++ b/web/src/components/Layout/Layout.astro
@@ -2,13 +2,11 @@
   <header class="header">
     <slot name="header" />
   </header>
-  <div class="main" id="main" tabIndex={-1}>
+  <main class="main" id="main" tabIndex={-1}>
     <slot />
-  </div>
-  <footer class="footer">
-    <div class="container pad4">
-      <slot name="footer" class="container" />
-    </div>
+  </main>
+  <footer class="footer pad4">
+    <slot name="footer" />
   </footer>
 </section>
 
@@ -30,6 +28,7 @@
   z-index: 100;
 }
 
+/** Occupy viewport height */
 .main {
   display: block;
   min-height: calc( 100vh - var(--footerH));
