--- a/web/src/layouts/minimal.astro
+++ b/web/src/layouts/minimal.astro
@@ -1,9 +1,9 @@
 ---
 import {cn} from '../lib/helpers'
 import {Page} from '../lib/page/Page.ts'
+
 const page:Page = Astro.props.page;
 const className = Astro.props.className || '';
-
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +12,7 @@ const className = Astro.props.className || '';
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{page.content.title}</title>
-    <link rel="stylesheet" href={Astro.resolve('../styles/global.css')} />
+    <link rel="stylesheet" href={Astro.resolve('../styles/global.scss')} />
 
     <link rel="shortcut icon" href="/favicon/favicon.ico">
     <link rel="icon" type="image/png" sizes="192x192"  href="/favicon/android-icon-192x192.png">
