--- a/web/src/components/Card/CardExpand.module.scss
+++ b/web/src/components/Card/CardExpand.module.scss
@@ -1,5 +1,5 @@
-@use "src/styles/variables" as *;
-@use "src/styles/helpers" as helpers;
+@use 'src/styles/variables' as *;
+@use 'src/styles/helpers' as helpers;
 
 $cardHeight: 280px;
 
