--- a/web/src/styles/_typo.scss
+++ b/web/src/styles/_typo.scss
@@ -1,4 +1,4 @@
-@use "src/styles/breakpoints" as bp;
+@use 'src/styles/breakpoints' as bp;
 
 // @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@400&display=swap");
 // @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400&display=swap");
